--- a/src/DayDayUp/Views/MainPage.xaml
+++ b/src/DayDayUp/Views/MainPage.xaml
@@ -65,7 +65,7 @@
                        VerticalAlignment="Center"
                        Width="16"
                        Height="16" />
-                <TextBlock Text="DayDayUp"
+                <TextBlock Text="{x:Bind ViewModel.Strings.AppDisplayName}"
                            Style="{StaticResource CaptionTextBlockStyle}"
                            VerticalAlignment="Center"
                            Margin="12,0,0,0" />
