--- a/src/DayDayUp/Styles/Fonts.xaml
+++ b/src/DayDayUp/Styles/Fonts.xaml
@@ -27,7 +27,9 @@
                 Value="0,0,0,8" />
     </Style>
     
-    <Style x:Key="BasicTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
+    <Style x:Key="BasicTextStyle" 
+           TargetType="TextBlock" 
+           BasedOn="{StaticResource BodyTextBlockStyle}">
         <Setter Property="Margin"
                 Value="8,0,8,0" />
     </Style>
@@ -46,6 +48,8 @@
                 Value="12" />
         <Setter Property="Foreground"
                 Value="Gray" />
+        <Setter Property="Margin"
+                Value="8,0,8,0" />
     </Style>
 
     <Style x:Key="CopyrightTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
