--- a/src/DayDayUp/Views/HomePage.xaml
+++ b/src/DayDayUp/Views/HomePage.xaml
@@ -8,6 +8,7 @@
       xmlns:models="using:DayDayUp.Models"
       xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       xmlns:views="using:DayDayUp.Views"
+      xmlns:viewmodels="using:DayDayUp.ViewModels"
       mc:Ignorable="d">
     
     <Page.Resources>
@@ -91,15 +92,15 @@
                     PaneBackground="Transparent">
             <Grid >
                 <ListView Name="TaskList"
-                          ItemsSource="{x:Bind ViewModel.Todos}"
+                          ItemsSource="{x:Bind ViewModel.TodoItems}"
                           SelectedItem="{x:Bind ViewModel.SelectedTodo, Mode=TwoWay}"
-                          Visibility="{x:Bind ViewModel.Todos.Count,Converter={StaticResource CountConverter}, Mode=OneWay}"
+                          Visibility="{x:Bind ViewModel.TodoItems.Count,Converter={StaticResource CountConverter}, Mode=OneWay}"
                           Loaded="TaskList_Loaded"
                           RightTapped="ListView_RightTapped"
                           Tapped="TaskList_ItemClick"
                           ItemContainerStyle="{StaticResource DoingTodoItemContainerStyle}">
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="models:Todo">
+                        <DataTemplate x:DataType="viewmodels:TodoListItemViewModel">
                             <Grid x:Name="itemRoot"
                                   Padding="8"
                                   Height="56"
@@ -134,7 +135,7 @@
                                     <ColumnDefinition Width="48" />
                                 </Grid.ColumnDefinitions>
                                 <CheckBox Grid.Column="0"
-                                          IsChecked="{x:Bind IsFinished}"
+                                          IsChecked="{x:Bind todo.IsFinished}"
                                           Click="CheckBox_Click"
                                           VerticalAlignment="Center" />
                                 <StackPanel Grid.Column="1"
@@ -143,18 +144,15 @@
                                             Spacing="4">
                                     <TextBlock x:Name="taskNameTextBlock"
                                                HorizontalAlignment="Left"
-                                               Text="{x:Bind Name, Mode=OneWay}"
+                                               Text="{x:Bind todo.Name, Mode=OneWay}"
                                                Style="{ThemeResource BasicTextStyle}" />
-                                    <StackPanel Orientation="Horizontal"
-                                                Spacing="4"
-                                                Margin="{StaticResource ContentMargin}"
-                                                Visibility="{x:Bind ExpectedDurationMins, Converter={StaticResource CountConverter},Mode=OneWay}">
-                                        <TextBlock x:Name="EstimatedDuration"
-                                                   x:Uid="Progress"
-                                                   Style="{ThemeResource SmallTextStyle}" />
-                                        <TextBlock Text="{x:Bind Progress, Mode=OneWay, Converter={StaticResource ProgressToStringConverter}}"
-                                                   Style="{ThemeResource SmallTextStyle}" />
-                                    </StackPanel>
+                                    <TextBlock Visibility="{x:Bind todo.ExpectedDurationMins, Converter={StaticResource CountConverter}}"
+                                               Style="{ThemeResource SmallTextStyle}"
+                                               HorizontalAlignment="Left">
+                                            <Run Text="{x:Bind ProgressString}" />
+                                            <Run Text="{x:Bind todo.Progress, 
+                                                Mode=OneWay, 
+                                                Converter={StaticResource ProgressToStringConverter}}" /></TextBlock>
                                 </StackPanel>
                                 <Button x:Name="StartButton"
                                         Grid.Column="2"
@@ -162,18 +160,18 @@
                                               VerticalAlignment="Center"
                                               HorizontalAlignment="Center"
                                               Click="StartButton_Click"
-                                              Visibility="{x:Bind ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
+                                        Visibility="{x:Bind todo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
                                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                                         <FontIcon Name="StartIcon"
                                                   FontSize="16"
                                                   FontFamily="Segoe Fluent Icons"
                                                   Glyph="&#xe768;"
-                                                  Visibility="{x:Bind Status,  Mode=OneWay,Converter={StaticResource NegativeTaskStatusConverter}}" />
+                                                  Visibility="{x:Bind todo.Status,  Mode=OneWay,Converter={StaticResource NegativeTaskStatusConverter}}" />
                                         <FontIcon Name="PauseIcon"
                                                   FontSize="16"
                                                   FontFamily="Segoe Fluent Icons"
                                                   Glyph="&#xe769;"
-                                                  Visibility="{x:Bind Status,  Mode=OneWay,Converter={StaticResource TaskStatusConverter}}" />
+                                                  Visibility="{x:Bind todo.Status,  Mode=OneWay, Converter={StaticResource TaskStatusConverter}}" />
                                     </StackPanel>
                                 </Button>
                                 <muxc:ProgressRing Grid.Column="2"
@@ -181,8 +179,8 @@
                                                    Height="32"
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
-                                                   Value="{x:Bind Progress}"
-                                                   Visibility="{x:Bind Status, Mode=OneWay,Converter={StaticResource TaskStatusConverter}}"
+                                                   Value="{x:Bind todo.Progress}"
+                                                   Visibility="{x:Bind todo.Status, Mode=OneWay,Converter={StaticResource TaskStatusConverter}}"
                                                    Maximum="100"
                                                    IsIndeterminate="False" />
                             </Grid>
@@ -190,7 +188,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
                 <TextBlock Name="DefaultText"
-                           Visibility="{x:Bind ViewModel.Todos.Count, Converter={StaticResource NegativeCountConverter}, Mode=OneWay}"
+                           Visibility="{x:Bind ViewModel.TodoItems.Count, Converter={StaticResource NegativeCountConverter}, Mode=OneWay}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Text="{x:Bind ViewModel.Strings.EmptyList}" />
@@ -202,9 +200,9 @@
                               CornerRadius="4">
                     <StackPanel Spacing="4">
                         <TextBox x:Name="DetailPanelTaskName"
-                                 PlaceholderText="{x:Bind ViewModel.SelectedTodo.Name}"
+                                 PlaceholderText="{x:Bind ViewModel.SelectedTodo.todo.Name}"
                                  TextWrapping="Wrap"
-                                 Text="{x:Bind ViewModel.SelectedTodo.Name, Mode=OneWay}"
+                                 Text="{x:Bind ViewModel.SelectedTodo.todo.Name, Mode=OneWay}"
                                  KeyUp="DetailPanelTaskName_KeyUp"
                                  FontSize="16" />
                         
@@ -213,11 +211,11 @@
                                 Click="StatusButton_Click"
                                 Height="44"
                                 VerticalContentAlignment="Center"
-                                Visibility="{x:Bind ViewModel.SelectedTodo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
+                                Visibility="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
                             <Button.Content>
                                 <TextBlock TextWrapping="Wrap">
                                     <Run Text="{x:Bind ViewModel.Strings.Status}" />
-                                    <Run Text="{x:Bind ViewModel.SelectedTodo.Status, Mode=OneWay, Converter={StaticResource StatusToStringConverter}}"
+                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.Status, Mode=OneWay, Converter={StaticResource StatusToStringConverter}}"
                                          FontWeight="Bold" /></TextBlock>
                             </Button.Content>
                         </Button>
@@ -230,7 +228,7 @@
                             <Button.Content>
                                 <TextBlock>
                                     <Run Text="{x:Bind ViewModel.Strings.EstimatedDuration}"/>
-                                    <Run Text="{x:Bind ViewModel.SelectedTodo.ExpectedDurationMins, Mode=OneWay, Converter={StaticResource DurationToStringConverter}}"
+                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, Mode=OneWay, Converter={StaticResource DurationToStringConverter}}"
                                          FontWeight="Bold" /></TextBlock>
                             </Button.Content>
                         </Button>
@@ -240,7 +238,7 @@
                                 HorizontalContentAlignment="Left"
                                 Height="44"
                                 VerticalContentAlignment="Center"
-                                Visibility="{x:Bind ViewModel.SelectedTodo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}"
+                                Visibility="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}"
                                 Click="PredictionButton_Click">
                             <Button.Content>
                                 <TextBlock TextWrapping="Wrap"
@@ -252,23 +250,23 @@
                                        HorizontalContentAlignment="Left"
                                        ExpandDirection="Down"
                                        IsExpanded="False"
-                                       Visibility="{x:Bind ViewModel.SelectedTodo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
+                                       Visibility="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, Converter={StaticResource CountConverter}, Mode=OneWay}">
                             <muxc:Expander.Header>
                                 <TextBlock TextWrapping="Wrap">
                                     <Run Text="{x:Bind ViewModel.Strings.Duration}" />
-                                    <Run Text="{x:Bind ViewModel.SelectedTodo.DurationMins, Mode=OneWay,Converter={StaticResource DurationToStringConverter}}"
+                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.DurationMins, Mode=OneWay,Converter={StaticResource DurationToStringConverter}}"
                                          FontWeight="Bold"/>
                                 </TextBlock>
                             </muxc:Expander.Header>
                             <muxc:Expander.Content>
                                 <views:TodoTimeStamp x:Name="TodoTimeStamp_Expander"
-                                                     TimeStamps="{x:Bind ViewModel.SelectedTodo.TimeStamps,Mode=OneWay}" />
+                                                     TimeStamps="{x:Bind ViewModel.SelectedTodo.todo.TimeStamps,Mode=OneWay}" />
                             </muxc:Expander.Content>
                         </muxc:Expander>
                       
                         <TextBlock Style="{ThemeResource SmallTextStyle}" HorizontalAlignment="Center">
                                 <Run Text="{x:Bind ViewModel.Strings.CreatedIn}" />
-                                <Run Text="{x:Bind ViewModel.SelectedTodo.CreationDate, Mode=OneWay, Converter={StaticResource DateToStringConverter}}" /></TextBlock>
+                                <Run Text="{x:Bind ViewModel.SelectedTodo.todo.CreationDate, Mode=OneWay, Converter={StaticResource DateToStringConverter}}" /></TextBlock>
                     </StackPanel>
                 </ScrollViewer>
             </SplitView.Pane>
