--- a/src/DayDayUp/Views/HomePage.xaml
+++ b/src/DayDayUp/Views/HomePage.xaml
@@ -17,7 +17,7 @@
         <helper:CountToVisibilityConverter x:Key="CountConverter" />
         <helper:CountToVisibilityNegativeConverter x:Key="NegativeCountConverter" />
         <helper:DurationToStringConverter x:Key="DurationToStringConverter" />
-        <helper:StatusToStringConverter x:Key="StatusToStringConverter" />
+        <helper:StatusToStringConverter x:Key="StatusToStringConverter"/>
         <helper:DateToStringConverter x:Key="DateToStringConverter" />
         <MenuFlyout x:Name="TodoItemFlyout">
             <MenuFlyout.Items>
@@ -214,7 +214,8 @@
                             <Button.Content>
                                 <TextBlock TextWrapping="Wrap">
                                     <Run Text="{x:Bind ViewModel.Strings.Status}" />
-                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.Status, Mode=OneWay, Converter={StaticResource StatusToStringConverter}}"
+                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.Status, Mode=OneWay, 
+                                        Converter={StaticResource StatusToStringConverter}}"
                                          FontWeight="Bold" /></TextBlock>
                             </Button.Content>
                         </Button>
@@ -227,7 +228,8 @@
                             <Button.Content>
                                 <TextBlock>
                                     <Run Text="{x:Bind ViewModel.Strings.EstimatedDuration}"/>
-                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, Mode=OneWay, Converter={StaticResource DurationToStringConverter}}"
+                                    <Run Text="{x:Bind ViewModel.SelectedTodo.todo.ExpectedDurationMins, 
+                                        Mode=OneWay, Converter={StaticResource DurationToStringConverter}}"
                                          FontWeight="Bold" /></TextBlock>
                             </Button.Content>
                         </Button>
